updated the ui button components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,12 +18,9 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
@@ -37,3 +34,8 @@ body {
   height: 30px;
 }
 
+.bg_img {
+  background-image: url(../../public/bgimg.jpg) !important;
+  background-size: cover;
+  background-blend-mode: lighten;
+}
